# navidrome

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .gopmfile  .goreleaser.yml  .nvmrc  .travis.yml  AGENTS.md  API_COMPATIBILITY.md  APLAYER_INTEGRATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  FEATURE_ROADMAP.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PODCAST_PLAN.md  Procfile.dev  README.md  VENDOR_APLAYER.md  app.go  apply_pulse_fix.ps1  banner.go  bg.json  context7.json  data  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  fix.txt  flake.nix  glide.yaml  (+28 more)
.devcontainer/: Dockerfile  devcontainer.json  install-taglib.sh
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
api/: album_list.go  album_list_test.go  album_lists.go  album_lists_test.go  api.go  api_suite_test.go  api_test.go  base_api_controller.go  browsing.go  browsing_test.go  get_album_list.go  get_album_list_test.go  get_cover_art.go  get_cover_art_test.go  get_indexes.go  get_indexes_test.go  get_license.go  get_license_test.go  get_music_directory.go  get_music_directory_test.go  get_music_folders.go  get_music_folders_test.go  helpers.go  media_annotation.go  media_retrieval.go  media_retrieval_test.go  middlewares.go  middlewares_test.go  ping.go  ping_test.go  playlists.go  search.go  searching.go  spec.yml  spec1.yml  stream.go  stream_test.go  system.go  system_test.go  users.go  (+4 more)
archive/: gru4rec_merged.py
assets/: external.go
cmd/: backup.go  cmd_suite_test.go  inspect.go  mbzid_migration.go  pls.go  plugin.go  plugin_test.go  registry.go  restore.go  root.go  root_test.go  scan.go  scan_test.go  signaler_nonunix.go  signaler_unix.go  signaller_nounix.go  signaller_unix.go  start.go  svc.go  svc_test.go  user.go  utils.go  version.go  wire_gen.go  wire_injectors.go
conf/: app.conf  configuration.go  configuration_test.go  defaults.go  defaults_win.go  dir.go  dir_test.go  export_test.go  inject_definitions.go  mime_types.go  router.go  sqlite_options.go
consts/: banner.go  consts.go  mime_types.go  properties.go  version.go
contrib/: freebsd_rc  navidrome  navidrome.service  postinstall.sh  postremove.sh  preinstall.sh
controllers/: get_license.go  get_music_folders.go  main.go  main_test.go  object.go  ping.go  sync.go  user.go  validation.go
core/: archiver.go  archiver_test.go  artwork.go  artwork_cache_warmer.go  artwork_internal_test.go  artwork_test.go  broken.go  cache_warmer.go  common.go  common_test.go  core_suite_test.go  cover.go  cover_test.go  external_info.go  external_info2.go  external_metadata.go  external_metadata_simple_test.go  external_metadata_test.go  file_caches.go  file_caches_test.go  fs.go  get_entity.go  image_upload.go  image_upload_test.go  inspect.go  library.go  library_test.go  maintenance.go  maintenance_test.go  media_streamer.go  media_streamer_Internal_test.go  media_streamer_test.go  metrics.go  missing_files.go  missing_files_test.go  mock_library_service.go  mock_transcoding_repo_test.go  mock_user_service.go  noop_plugin_loader.go  nowplaying.go  (+15 more)
db/: backup.go  backup_test.go  db.go  db_test.go  export_test.go  optimize.go  optimize_test.go
dlna/: connectionmanagerservice.go  contenddirectoryservice.go  dlnaserver.go  mediareceiverregistrarservice.go
docker/: .gitignore  Dockerfile
docs/: DIAGRAMA_ER.md  NAVIDROME_ER.drawio  NAVIDROME_ER_COMPLETE.drawio  TEST_PLAN_STAR_ENDPOINT.md  doc.go  hld-plugins.md  lab2-be-int-star-song.md
domain/: album.go  artist.go  base.go  checksum.go  index.go  media_file.go  media_folder.go  mediafile.go  mediafolder.go  nowplaying.go  playlist.go  properties.go  property.go  user.go
engine/: browser.go  browser_test.go  common.go  cover.go  cover_test.go  engine_suite_test.go  file_caches.go  file_caches_test.go  list_generator.go  lists.go  media_streamer.go  media_streamer_test.go  mock_nowplaying_repo.go  mock_property_repo.go  nowplaying.go  nowplaying_repository_test.go  nowplaying_test.go  players.go  players_test.go  playlists.go  properties.go  ratings.go  scrobbler.go  scrobbler_test.go  search.go  stream.go  stream_test.go  users.go  users_test.go  wire_providers.go
git/: pre-commit  pre-push
init/: inject_definitions.go  mime_types.go  router.go
itunesbridge/: itunes.go  script.go
log/: buffer_hook.go  buffer_hook_test.go  formatters.go  formatters_test.go  journal.go  journal_test.go  (+7 more)
plugins/examples/discord-rich-presence-rs/: Cargo.toml  README.md  manifest.json
plugins/examples/discord-rich-presence-rs/src/: lib.rs  rpc.rs
plugins/examples/library-inspector/: Cargo.toml  README.md
plugins/examples/library-inspector-rs/: Cargo.toml  README.md  manifest.json
plugins/examples/library-inspector-rs/src/: lib.rs
plugins/examples/library-inspector/src/: lib.rs
plugins/examples/webhook-rs/: .gitignore  Cargo.toml  README.md  manifest.json
plugins/examples/webhook-rs/src/: lib.rs
plugins/pdk/rust/nd-pdk/: Cargo.toml
plugins/pdk/rust/nd-pdk-capabilities/: Cargo.toml
plugins/pdk/rust/nd-pdk-capabilities/src/: httpendpoint.rs  lib.rs  lifecycle.rs  lyrics.rs  metadata.rs  playlistgenerator.rs  playlistprovider.rs  scheduler.rs  scrobbler.rs  sonicsimilarity.rs  taskworker.rs  websocket.rs
plugins/pdk/rust/nd-pdk-host/: Cargo.toml  lib.rs
plugins/pdk/rust/nd-pdk-host/src/: lib.rs  nd_host_artwork.rs  nd_host_cache.rs  nd_host_config.rs  nd_host_http.rs  nd_host_httpclient.rs  nd_host_kvstore.rs  nd_host_library.rs  nd_host_matcher.rs  nd_host_scheduler.rs  nd_host_scrobbleretriever.rs  nd_host_storage.rs  nd_host_subsonicapi.rs  nd_host_task.rs  nd_host_taskqueue.rs  nd_host_users.rs  nd_host_websocket.rs
plugins/pdk/rust/nd-pdk-types/: Cargo.toml
plugins/pdk/rust/nd-pdk-types/src/: lib.rs
plugins/pdk/rust/nd-pdk/src/: lib.rs
src-tauri/: Cargo.toml
src-tauri/src/: macos_media.rs  main.rs
(+3979 files in other folders)
