# src-tauri/Cargo.toml (Partial Snippet)
[dependencies]
tauri = { version = "1.x", features = ["system-tray", "notification", "window-start-dragging", "shell-open"] }
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
# ... other standard dependencies

# --- Tauri Features Configuration ---
[features]
default = [ "custom-protocol" ]
# Enable the features required for macOS system integration
custom-protocol = [ ]
