[package]
name = "navidrome-jukebox"
version = "0.1.0"
description = "A Tauri App for Navidrome Jukebox with macOS Media Controls"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "notification", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# macOS-specific dependencies for media control
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
