[package]
name = "discord-rich-presence-rs"
version = "1.0.0"
edition = "2021"
description = "Discord Rich Presence plugin for Navidrome - Rust implementation"
authors = ["Navidrome Team"]
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nd-host = { path = "../../host/rust" }
