[package]
name = "library-inspector"
version = "1.0.0"
edition = "2021"
description = "Navidrome plugin that periodically logs library details and finds largest files"
authors = ["Navidrome Team"]
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
