[package]
name = "nd-pdk-capabilities"
version = "0.1.0"
edition = "2021"
description = "Navidrome capability wrappers for Rust plugins"
authors = ["Navidrome Team"]
license = "GPL-3.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
extism-pdk = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
