[package]
name = "nd-pdk-host"
version = "0.1.0"
edition = "2021"
description = "Navidrome host function wrappers for Rust plugins"
authors = ["Navidrome Team"]
license = "GPL-3.0"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
extism-pdk = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
